--- a/legal.html
+++ b/legal.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <title>Meower | Legal</title>
   <link rel="shortcut icon" href="assets/meowy.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
   
@@ -16,17 +15,17 @@
   </header>
 
   <nav class="sticky">
-    <a href="index.html"><i class="fas fa-home icon"></i>Home</a>
-    <a href="https://app.meower.org"><i class="fas fa-rocket icon"></i>Launch</a>
-    <a href="aboutus.html"><i class="fas fa-info-circle icon"></i>About Us</a>
+    <a href="index.html"><img src="icons/home.svg">Home</a>
+    <a href="https://app.meower.org"><img src="icons/rocket.svg">Launch</a>
+    <a href="about.html"><img src="icons/help-circle.svg">About Us</a>
 
     <div class="dropdown">
-      <button class="dropbtn"><i class="fas fa-ellipsis-h icon"></i>More</button>
+      <button class="dropbtn"><img src="icons/more-horizontal.svg">More</button>
       <div class="dropdown-content">
-        <a href="https://forums.meower.org/"><i class="fas fa-comments icon"></i>Forums</a>
-        <a href="https://wiki.meower.org/wiki/Home"><i class="fas fa-book icon"></i>Wiki</a>
-        <a href="https://github.com/meower-media-co"><i class="fab fa-github icon"></i>GitHub</a>
-        <a href="legal.html"><i class="fas fa-gavel icon"></i>Legal</a>
+        <a href="https://forums.meower.org/"><img src="icons/users-2.svg">Forums</a>
+        <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
+        <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
+        <a href="legal.html"><img src="icons/scale.svg">Legal</a>
       </div>
     </div>
   </nav>
