--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
       <div class="item">
         <img src="moderators/semisol.jpg" alt="Semisol">
-        <h3>Semisol</h3>
+        <h3>underfanreal</h3>
       </div>
 
       <div class="item">
