--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/meowy.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>Meower | Home</title>
+  <title>Meower | 404</title>
 </head>
 
 <body>
@@ -37,7 +36,7 @@
       <h1>404 - Page Not Found</h1>
       <p>Whoops! It looks like you followed an invalid link... Or, you were just looking for cat pictures.</p>
 	  <br>
-	  <img src="assets/cat_disks.jpg" class="center" style="width=100%;">
+	  <img src="assets/cat_disks.jpg" class="center" style="max-width: 100%;">
     </section>
   </main>
   <footer>
