--- a/legal-nutshell.html
+++ b/legal-nutshell.html
@@ -36,42 +36,43 @@
 	<br>
     <section>
       <h1 class="title">Meower Legal (In a nutshell)</h1>
-      <p>Last updated 7 June 2023</p>
+      <p>Last updated 11 June 2023</p>
     </section>
 	<br>
 	<section>
       <h1 class="title" style='color: red;'>Important Notice</h1>
-      <p class="body">This page is a summary of Meower's legal page. It is not a subsitute. It is encouraged that you read and understand the legal page during account setup.</p>
+      <p class="body">This page is a summary of Meower's legal page. It is not a substitute. It is encouraged that you read and understand the legal page during account setup.</p>
 	</section>
 	<br>
 	<section>
       <h1 class="title">Basic Rules</h1>
-      <p class="body">You should always follow these rules when using Meower. Failing to do so can result in moderator action, such as kicks, bans or IP bans.<br></p>
+      <p class="body">You should always follow these rules when using Meower. Failing to do so can result in moderator action, such as kicks, bans, or terminations.<br></p>
       <br>
-      <p class="body"><b style='color: red;'>Always</b> make sure you respect other's rights and privacy. This means not sharing their personal info without their permission. Sharing personal info without permission may count as defamation, which could result in a fine, depending on where you live.</p>
+      <p class="body"><i>If you're under 13, we'll need you to get permission from a parent or legal guardian before you can sign up!</i></p>
+      <br>
+      <p class="body"><b style='color: red;'>Always</b> make sure you respect others' rights and privacy. Don't share their personal info without permission.</p>
       <br>
       <p class="body"><b style='color: red;'>Always</b> keep any posts, comments, messages or threads "Rated E for everyone" friendly, and never share pornographic or vulgar content.</p>
       <br>
-      <p class="body"><b style='color: red;'>Always</b> respect the will of other users on Meower. This could mean for example, if someone asked you to delete a parody account that involves them, you should always do so.</p>
+      <p class="body"><b style='color: red;'>Always</b> respect the will of other users on Meower. For example, if someone asks you to delete a parody account that involves them, you should always do so.</p>
       <br>
-      <p class="body"><b style='color: red;'>Always</b> repect interllectual property rights. No copyrighted content by anyone other than Meower is permitted to be shared unless you have explicity written permission to share said content.</p>
+      <p class="body"><b style='color: red;'>Always</b> respect intellectual property rights. No copyrighted content should be shared unless you have explicit written permission to share said content.</p>
       <br>
       <p class="body"><b style='color: red;'>Never</b> spam on Meower. This includes making multiple posts in a short period of time.</p>
       <br>
       <p class="body"><b style='color: red;'>Don't</b> scam people on Meower. This includes links that steal people's information (phishing).</p>
       <br>
-      <p class="body"><b style='color: red;'>Don't</b> impersonate people on Meower. All parody accounts should state that they are parody's in their quote or username to avoid moderator action.</p>
+      <p class="body"><b style='color: red;'>Don't</b> impersonate people on Meower. All parody accounts should state that they are parodies in their quote or username.</p>
       <br>
-      <p class="body"><b style='color: red;'>Don't</b> harrass people on Meower. Harrassment is not tolerated and is a serious matter. Any harrassment will result in an immediate ban.</p>
-      <br>
-      <p class="body"><i>And just a heads up, if you're under 13, we'll need you to get permission from a parent or legal guardian before you can sign up!</i></p>
+      <p class="body"><b style='color: red;'>Don't</b> harass people on Meower. Any harassment will result in a ban.</p>
 	</section>
 	<br>
 	<section>
-      <h1 class="title">A touch on your privacy</h1>
-      <p class="body">We will never collect any personal information! Personal information includes real names, dates of birth, gender info or location data.</p>
+      <h1 class="title">Your Privacy</h1>
+      <p class="body">We will never collect any personal information, such as real names, dates of birth, gender info, or location data.</p>
       <br>
-      <p class="body">When you use Meower, your IP address will be shared with IPHub for moderation purposes. This is to help prevent ban evasion with VPNs and proxies, as well as preventing users with certain IP addresses from using Meower.</p>
+      <p class="body">When you use Meower, your IP address will be shared with IPHub for moderation purposes. This is to help prevent ban evasion with VPNs and proxies, as well as preventing certain users from using Meower.</p>
+		<br>
       <p class="body">All Meower traffic is passed through Cloudflare to help protect our servers from DDoS attacks and other malicious activity. Cloudflare's privacy policy is available <a href="https://www.cloudflare.com/privacypolicy/">here.</a></p>
       <br>
       <p class="body">We only collect info we need to help run our service, including your username, a hashed version of your password, quote, profile picture, your posts, comments, messages, and failed account login attempts (for security).</p>
