--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Meower | Home</title>
 </head>
 
-<body>
+<body class="style1">
   <header>
     <a href="index.html"><img src="assets/meowerlogo-white.svg" alt="Meower Header"></a>
   </header>
@@ -26,6 +26,12 @@
         <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+        <!-- Add Theme Switching Options -->
+        <p style="text-decoration: underline; color: #fff;">Themes</p>
+        <button id="light-theme-1-btn"><img src="icons/palette.svg">Orange</button>
+        <button id="light-theme-2-btn"><img src="icons/palette.svg">Blue</button>
+        <button id="dark-theme-1-btn"><img src="icons/palette.svg">Dark Orange</button>
+        <button id="dark-theme-2-btn"><img src="icons/palette.svg">Dark Blue</button>
       </div>
     </div>
   </nav>
@@ -60,7 +66,8 @@
 
     <section>
       <h1>Join the Community</h1>
-      <p>Are you ready to join a vibrant community of creators and enthusiasts? <a href="https://app.meower.org" class="btn">Sign up</a> for a Meower account today and
+      <p>Are you ready to join a vibrant community of creators and enthusiasts? <a href="https://app.meower.org"
+          class="btn">Sign up</a> for a Meower account today and
         start sharing your ideas, creations, and stories with the world. Let your voice be heard and connect with fellow
         Meowers!</p>
     </section>
@@ -73,9 +80,8 @@
   </footer>
 
   <!-- Add your script tags for any JavaScript files here -->
+  <script src="themes.js"></script>
 
 </body>
 
 </html>
-
-
