--- a/about.html
+++ b/about.html
@@ -26,6 +26,12 @@
         <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+        <!-- Add Theme Switching Options -->
+        <p style="text-decoration: underline; color: #fff;">Themes</p>
+        <button id="light-theme-1-btn"><img src="icons/palette.svg">Orange</button>
+        <button id="light-theme-2-btn"><img src="icons/palette.svg">Blue</button>
+        <button id="dark-theme-1-btn"><img src="icons/palette.svg">Dark Orange</button>
+        <button id="dark-theme-2-btn"><img src="icons/palette.svg">Dark Blue</button>
       </div>
     </div>
   </nav>
@@ -117,7 +123,7 @@
 
       <div class="item">
         <img src="moderators/semisol.jpg" alt="Semisol">
-        <h3>underfanreal</h3>
+        <h3>Semisol</h3>
       </div>
 
       <div class="item">
@@ -133,6 +139,7 @@
       <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
     </p>
   </footer>
+  <script src="themes.js"></script>
 </body>
 
 </html>
