--- a/discord.html
+++ b/discord.html
@@ -26,9 +26,16 @@
         <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+        <!-- Add Theme Switching Options -->
+        <p style="text-decoration: underline; color: #fff;">Themes</p>
+        <button id="light-theme-1-btn"><img src="icons/palette.svg">Orange</button>
+        <button id="light-theme-2-btn"><img src="icons/palette.svg">Blue</button>
+        <button id="dark-theme-1-btn"><img src="icons/palette.svg">Dark Orange</button>
+        <button id="dark-theme-2-btn"><img src="icons/palette.svg">Dark Blue</button>
       </div>
     </div>
   </nav>
+  
   <main>
     <script>
       class Cloudlink {
@@ -154,6 +161,7 @@
       <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
     </p>
   </footer>
+  <script src="themes.js"></script>
 </body>
 
 </html>
