--- a/legal.html
+++ b/legal.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meower | Legal</title>
-  <link rel="shortcut icon" href="assets/meowy.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
   
@@ -26,6 +26,12 @@
         <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+        <!-- Add Theme Switching Options -->
+        <p style="text-decoration: underline; color: #fff;">Themes</p>
+        <button id="light-theme-1-btn"><img src="icons/palette.svg">Orange</button>
+        <button id="light-theme-2-btn"><img src="icons/palette.svg">Blue</button>
+        <button id="dark-theme-1-btn"><img src="icons/palette.svg">Dark Orange</button>
+        <button id="dark-theme-2-btn"><img src="icons/palette.svg">Dark Blue</button>
       </div>
     </div>
   </nav>
@@ -188,6 +194,7 @@
       <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
     </p>
   </footer>
+  <script src="themes.js"></script>
 
 </body>
 
