--- a/404.html
+++ b/404.html
@@ -26,12 +26,6 @@
         <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
-        <!-- Add Theme Switching Options -->
-        <p style="text-decoration: underline; color: #fff;">Themes</p>
-        <button id="light-theme-1-btn"><img src="icons/palette.svg">Orange</button>
-        <button id="light-theme-2-btn"><img src="icons/palette.svg">Blue</button>
-        <button id="dark-theme-1-btn"><img src="icons/palette.svg">Dark Orange</button>
-        <button id="dark-theme-2-btn"><img src="icons/palette.svg">Dark Blue</button>
       </div>
     </div>
   </nav>
@@ -49,6 +43,7 @@
     <p>&copy; 2020 -
       <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
     </p>
+    <button class="theme-switcher-button" id="theme-switcher-button"><img src="icons/palette.svg"></button>
   </footer>
 
   <!-- Add your script tags for any JavaScript files here -->
