--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <div class="team-member">
       <img src="assets/mike.jpeg" alt="MikeDEV">
       <h3>MikeDEV</h3>
-      <p>The DuckLord. Chief Executive Officer and Backend Sysadmin.</p>
+      <p>The Ducklord. Chief Executive Officer and Backend Sysadmin.</p>
     </div>
 
     <div class="team-member">
@@ -75,7 +75,7 @@
     <div class="team-member">
       <img src="assets/lilCatBlock-01.png" alt="DaCatBlock">
       <h3>DaCatBlock</h3>
-      <p>Web Developer</p>
+      <p>Web Developer and supporter for Meower since late 2021!</p>
     </div>
 
     <div class="team-member">
