--- a/legal.html
+++ b/legal.html
@@ -5,163 +5,193 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meower | Legal</title>
-  <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
-  <link href="/style.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 </head>
-<style>
-  section {
-      background:  rgba(0, 0, 0, 0.3);
-      color: white;
-      border-radius: 1em;
-      padding: 1em;
-      top: 50%;
-      left: 50%;
-      margin: auto;
-      width: 60%;
-      text-align: center;
-      align-self: center;
-      align-content: center; }
-</style>
-<body style="background-image: url('/assets/meowtain-blur.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
-  <br>
-  <section>
-    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/meowerlogo-white.svg"></a>
-  </section>
-  <br>
-  <section>
-    <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://old.meower.org">Scratch Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a> | <a class="nav-links" href="/legal.html">Legal</a>
-  </section>
-  <br>
-  <section>
-    <h1 class="title">Meower Legal</h1>
-    <p class="body">Last updated 13 November 2022</p>
-  </section>
-  <br>
-  <section>
-    <h1 class="title" style='color: red;'>Important Notice</h1>
-    <p class="body">Please note that this document isn't written by professional lawyers and may contain errors. Hereafter, “we”/“our”/“us” refers to Meower Media, and “you” refers to a user of Meower. We aren't lawyers and we don't have lawyers. Everything you see here is all-encompassing.</p>
-  </section>
-  <br>
-  <section>
-    <h1 class="title">License</h1>
-    <p class="body">MIT License<br>
+  
+<body>
+  <header>
+    <a href="index.html"><img src="assets/meowerlogo-white.svg"></a>
+  </header>
 
-Copyright (c) <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media.<br><br><br>
+  <nav class="sticky">
+    <a href="index.html"><img src="icons/home.svg">Home</a>
+    <a href="https://app.meower.org"><img src="icons/rocket.svg">Launch</a>
+    <a href="about.html"><img src="icons/help-circle.svg">About Us</a>
 
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:<br><br>
+    <div class="dropdown">
+      <button class="dropbtn"><img src="icons/more-horizontal.svg">More</button>
+      <div class="dropdown-content">
+        <a href="https://forums.meower.org/"><img src="icons/users-2.svg">Forums</a>
+        <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
+        <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
+        <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+      </div>
+    </div>
+  </nav>
 
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.<br><br>
+  <main>
+    <br>
+    <section>
+      <h1 class="title">Meower Legal</h1>
+      <p>Last updated 13 November 2022</p>
+    </section>
+    <br>
+    <section>
+      <h1 style="color: red;">Important Notice</h1>
+      <p>Please note that this document isn't written by professional lawyers and may contain errors.
+        Hereafter, “we”/“our”/“us” refers to Meower Media, and “you” refers to a user of Meower. We aren't lawyers and
+        we
+        don't have lawyers. Everything you see here is all-encompassing.</p>
+    </section>
+    <br>
+    <section>
+      <h1>License</h1>
+      <p>MIT License<br>
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.</p>
-  </section>
-  <br>
-  <section>
-    <h1 class="title">Terms of Use</h1>
-    <p class="body"><b>You are required to do the following:</b>
-      <br>a. Respect other individuals' rights and privacy
-      <br>b. Refrain from spamming, scamming, impersonating, or otherwise harassing other people using our service
-      <br>c. Keep all posts/comments/messages/threads “Rated E for Everyone” friendly and absolutely never cause pornographic or vulgar content to be shared
-      <br>d. Respect the will of other individuals using the service
-      <br>e. Respect other entities intellectual property rights (No content copyrighted by anyone other than Meower is permitted to be shared unless you have explicit written permission to share said content)
-      <br>f. Agree to our policies to use the service</p>
+        Copyright (c) 2022 Meower Media.<br><br><br>
+
+        Permission is hereby granted, free of charge, to any person obtaining a copy
+        of this software and associated documentation files (the "Software"), to deal
+        in the Software without restriction, including without limitation the rights
+        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+        copies of the Software, and to permit persons to whom the Software is
+        furnished to do so, subject to the following conditions:<br><br>
+
+        The above copyright notice and this permission notice shall be included in all
+        copies or substantial portions of the Software.<br><br>
+
+        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+        SOFTWARE.</p>
+    </section>
+
+    <section>
+      <h1>Terms of Use</h1>
+      <p class="left"><b>You are required to do the following:</b>
+      <ul>
+        <li>Respect other individuals' rights and privacy</li>
+        <li>Refrain from spamming, scamming, impersonating, or otherwise harassing other people using our service</li>
+        <li>Keep all posts/comments/messages/threads “Rated E for Everyone” friendly and absolutely never cause
+          pornographic or vulgar content to be shared</li>
+        <li>Respect the will of other individuals using the service</li>
+        <li>Respect other entities' intellectual property rights (No content copyrighted by anyone other than Meower
+          is
+          permitted to be shared unless you have explicit written permission to share said content)</li>
+        <li>Agree to our policies to use the service</li>
+      </ul>
+      </p>
       <br>
-      <p class="body">
-      <i>COPPA Notice: If you are legally a minor, we are required to obtain both your consent and your parent's consent to use the service. If you're over the age of (13), you are able to freely use Meower without us acquiring parental consent.</i>
-      <br><br>
-      <b>If we notice suspicious account activity, we must notify you of suspicious activity and may have to lock your account to protect Meower. “Suspicious account activity” strictly includes:</b>
-      <br>a. Too many failed login attempts
-      <br>b. Too many posts flagged for moderation
-      <br></p>
-      <p class="body"><b>Breaking our Terms of Use may result in any of the following moderation actions being taken by a capable moderator:</b>
-      <br>1. Being kicked from Meower
-      <br>2. Being indefinitely banned from Meower
-      <br>3. Any devices connected to the offending IP address being banned from Meower
-      <br>4. Being banned from any affiliates or direct partners of Meower Media.</p>
-  </p>
-  </section>
-  <br>
-  <section>
-    <h1 class="title">Privacy Policy</h1>
-      <p class="body"><b>We don't collect any personally identifying information.</b>
-      <br>a. This includes real names, dates of birth, gender info, geographic data, etc.
-      <br>b. Your IP address will be collected and shared with IPHub when signing up to ensure security, and will only be used for moderation purposes. IPHub's privacy policy can be found <a href="https://iphub.info/legal/privacy">here.</a>
+      <p>
+        <i>COPPA Notice: If you are legally a minor, we are required to obtain both your consent and your parent's
+          consent
+          to use the service. If you're over the age of 13, you are able to freely use Meower without us acquiring
+          parental consent.</i>
+      </p>
+      <p class="left">
+        <br><br>
+        <b>If we notice suspicious account activity, we must notify you of suspicious activity and may have to lock your
+          account to protect Meower. “Suspicious account activity” strictly includes:</b>
+      </p>
+      <ul>
+        <li>Too many failed login attempts</li>
+        <li>Too many posts flagged for moderation</li>
+      </ul>
+
+      <p class="left"><b>Breaking our Terms of Use may result in any of the following moderation actions being taken by
+          a capable moderator:</b>
+      </p>
+      <ul>
+        <li>Being kicked from Meower
+        <li>Being indefinitely banned from Meower
+        <li>Any devices connected to the offending IP address being banned from Meower
+        <li>Being banned from any affiliates or direct partners of Meower Media.
+      </ul>
+
+    </section>
+
+    <section>
+      <h1>Privacy Policy</h1>
+      <p class="left"><b>We don't collect any personally identifying information.</b></p>
+      <ul>
+        <li>This includes real names, dates of birth, gender info, geographic data, etc.</li>
+        <li>Your IP address will be collected and shared with IPHub when signing up to ensure security, and will only
+          be used for moderation purposes. IPHub's privacy policy can be found <a
+            href="https://iphub.info/legal/privacy">here</a>.</li>
+      </ul>
       <br>
-        All of Meower's traffic is passed through Cloudflare for security. Cloudflare's privacy policy is available <a href="https://www.cloudflare.com/privacypolicy/">here.</a>
+      All of Meower's traffic is passed through Cloudflare for security. Cloudflare's privacy policy is available <a
+        href="https://www.cloudflare.com/privacypolicy/">here</a>.
       <br>
-      <br>  
-      <i>*Please note that if you put in your real name, we are not legally responsible for anything that happens in or out of Meower.</i></p>
       <br>
-      <p class="body"><b>We only store information needed to make our service work.</b>
-      <br>This STRICTLY includes, and IS LIMITED TO:
-      <br>
-      <br>a. Usernames and hashed passwords for authentication.
-      <br>b. Your profile description and profile icon.
-      <br>c. Posts, comments, messages, and/or threads you create/reply to.
-      <br>d. Basic diagnostic data (Timestamps of logins/logouts, timestamps of failed login attempts, timestamps of moderated posts/comments/messages/threads).
-      <!-- Doesn't exist yet
-      <br>e. People you friend.
-      <br>f. Reputation data (“+Meows”, “-Meows”)
-      -->
-      <br>e. Your current state of authentication (to verify account activity and determine if an account has gone inactive).</p>
-      <br>
-      <p class="body"><b>You have the right to view, manage, and/or delete your account, diagnostics data, or content you've shared on Meower.</b>
-      <br><i>Please note that we are still in development, and we currently do not possess any ability to retrieve, store, delete, or provide diagnostic data.</i></p>
-      <br>
-      <p class="body"><b>If a data breach occurs in Meower, we will notify you as soon as possible.</b></p>
-      <br>
-      <p class="body"><b>If we ever make changes to our policies, we will notify you as soon as possible.</b>
-      <br><i>We will make updates via <!-- RIP Scratch Discussion Forums!-->our Discord, GitHub Updates, etc.</i></p>
-      <br>
-      <p class="body"><b>All data is to be treated equally.</b></p>
-  </section>
-  <br>
-  <section>
-    <h1 class="title">Content Policy</h1>
-    <p class="body"><b>We don't guarantee the stability or functionality of Meower, and it may be terminated at any time without warning.</b></p>
-    <br>
-    <p class="body"><b>We are required to moderate posts, comments, messages, and threads to keep our service safe for everyone.</b></p>
-    <!-- What does this mean? <p><b>We are not evil, and shall not become evil.</b> !-->
-    <br><p class="body"><i>We promise to uphold your rights to privacy and the aforementioned</i></p>
-    <br>
-    <p class="body"><b>Meower won't become closed-source.</b>
-    <br><i>It will remain FOSS (Free and Open-Source) for the betterment of ourselves and our posterity.</i></p>
-    <br>
-    <p class="body"><b>We are required to:</b>
-    <br>a. Keep our service safe for all individuals (moderation)
-    <br>b. Respect the privacy of all our users
-    <br>c. Protect the rights of all our users
-    <br>d. Keep the service operational and protect the service from malicious activity
-    <br>e. Maintain security measures to keep communications safe and secure
-    <br>f. Comply with local and international legislation regarding user privacy and data collection
-    <br>g. Be respectful</p>
-    <br>
-    <p class="body"><b>We cannot and shall not share/sell any of our collected data with outside entities.</b></p>
-    <!-- Confusing Parts
-    <p><b>We will not sell items and data related to Meower or attempt to make a profit off of users.</b>
-            <br>a. We will not sell any item or merchandise relating to Meower.
-            <br>b. We will not attempt to make Meower into a pay-to-use project.
-            <br>c. We will not sell or promote any paid items or products not related to Meower or its affiliates on Meower.
-            <br>d. We will not steal or collect banking and money-related information from users.
-            <br>e. We will not demand payment from a Meower user for any reason.
-            <br>f. We are not responsible for the selling of any Meower-related item, you may buy or sell these items at your own risk.
-            <br>g. We are not responsible if you have been defrauded by any person or website claiming to have any paid item or information relating to Meower.</p> -->
-  </section>
-  <br>
-  <section>
-    <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media.</p>
-    <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
-  </section>
+      <p>
+        <i>*Please note that if you put in your real name, we are not legally responsible for anything that happens in
+          or
+          out of Meower.</i>
+      </p>
+
+      <p><b>We only store information needed to make our service work.</b>
+        <br>This STRICTLY includes, and IS LIMITED TO:
+      </p>
+      <ol>
+        <li>Usernames and hashed passwords for authentication.</li>
+        <li>Your profile description and profile icon.</li>
+        <li>Posts, comments, messages, and/or threads you create/reply to.</li>
+        <li>Basic diagnostic data (Timestamps of logins/logouts, timestamps of failed login attempts, timestamps of
+        moderated posts/comments/messages/threads).</li>
+        <li>Your current state of authentication (to verify account activity and determine if an account has gone
+        inactive).</li>
+      </ol>
+      <p><b>You have the right to view, manage, and/or delete your account, diagnostics data, or content
+          you've shared on Meower.</b>
+        <br><i>Please note that we are still in development, and we currently do not possess any ability to retrieve,
+          store, delete, or provide diagnostic data.</i>
+      </p>
+      <p><b>If a data breach occurs in Meower, we will notify you as soon as possible.</b></p>
+      <p><b>If we ever make changes to our policies, we will notify you as soon as possible.</b>
+        <br><i>We will make updates via our Discord, GitHub Updates, etc.</i>
+      </p>
+      <p><b>All data is to be treated equally.</b></p>
+    </section>
+
+    <section>
+      <h1>Content Policy</h1>
+      <p><b>We don't guarantee the stability or functionality of Meower, and it may be terminated at any
+          time
+          without warning.</b></p>
+      <p><b>We are required to moderate posts, comments, messages, and threads to keep our service safe for
+          everyone.</b></p>
+      <p><i>We promise to uphold your rights to privacy and the aforementioned.</i></p>
+      <p><b>Meower won't become closed-source.</b>
+        <br><i>It will remain FOSS (Free and Open-Source) for the betterment of ourselves and our posterity.</i>
+      </p>
+      <p><b>We are required to:</b></p>
+      <ol>
+        <li>Keep our service safe for all individuals (moderation)</li>
+        <li>Respect the privacy of all our users</li>
+        <li>Protect the rights of all our users</li>
+        <li>Keep the service operational and protect the service from malicious activity</li>
+        <li>Maintain security measures to keep communications safe and secure</li>
+        <li>Comply with local and international legislation regarding user privacy and data collection</li>
+        <li>Be respectful</li>
+      </ol>
+      <p><b>We cannot and shall not share/sell any of our collected data with outside entities.</b></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2020 -
+      <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
+    </p>
+    <button class="theme-switcher-button" id="theme-switcher-button"><img src="icons/palette.svg"></button>
+  </footer>
+  
+  <script src="themes.js"></script>
+
 </body>
+
 </html>
