--- a/discord.html
+++ b/discord.html
@@ -1,125 +1,163 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title>meower | Discord</title>
-        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
-        <link href="legacy-style.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-        <script>
-            class Cloudlink {
-                constructor(server) {
-                    this.events = {};
-                    this.ws = new WebSocket(server);
-                    this.ws.onopen = async () => {
-                        this.send({
-                            cmd: 'direct',
-                            val: { cmd: 'type', val: 'js' },
-                        });
-                        this.emit('connected');
-                    };
-                    this.ws.onmessage = (socketdata) => {
-                        var data = JSON.parse(socketdata.data);
-                        this.emit(data.cmd, data);
-                    };
-                    this.ws.onclose = () => {
-                        this.emit('disconnected');
-                    };
-                    this.ws.onerror = (e) => {
-                        this.emit('error', e);
-                    };
-                }
-                send(data) {
-                    this.ws.send(JSON.stringify(data));
-                }
-                on(event, cb) {
-                    if (typeof this.events[event] !== 'object')
-                        this.events[event] = [];
-                    this.events[event].push(cb);
-                }
-                emit(event, data) {
-                    if (typeof this.events[event] !== 'object')
-                        return;
-                    this.events[event].forEach((cb) => cb(data));
-                }
-                disconnect() {
-                    this.ws.close();
-                }
-            }
+<html lang=en>
 
-            function error(errorDetails) {
-                if (document.getElementById("errorDialog").style.display == "none" && document.getElementById("successDialog").style.display == "none") {
-                    document.getElementById("loginForm").style.display = "none";
-                    document.getElementById("errorDialog").style.display = "block";
-                    document.getElementById("errorText").innerText = errorDetails;
-                    cljs.ws.close();
-                }
-            }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
+  <title>Meower | Discord</title>
+</head>
 
-            function login() {
-                document.getElementById("submit").disabled = true;
-                document.getElementById("submit").innerText = "Connecting...";
-                window.cljs = new Cloudlink("wss://server.meower.org");
-                cljs.on('connected', () => {
-                    document.getElementById("submit").innerText = "Authenticating...";
-                    cljs.send({cmd: "direct", val: "meower", listener: "trustCheck"})
-                });
-                cljs.on('statuscode', (data) => {
-                    if (data.val != "I:100 | OK" && data.val != "I:112 | Trusted Access enabled") {
-                        error(`CloudLink Error: ${data.val}`);
-                    } else if (data.val == "I:100 | OK" && data.listener == "trustCheck") {
-                        cljs.send({cmd: "direct", val: {cmd: "authpswd", val: {username: document.getElementById("username").value, pswd: document.getElementById("password").value}}, listener: "auth"})
-                    } else if (data.val == "I:100 | OK" && data.listener == "auth") {
-                        document.getElementById("submit").innerText = "Verifying...";
-                        const queryString = window.location.search;
-                        const urlParams = new URLSearchParams(queryString);
-                        cljs.send({cmd: "pvar", id: "Discord", name: "discord", val: urlParams.get('token')})
-                    }
-                });
-                cljs.on('pvar', (data) => {
-                    if (data.origin == "Discord" && data.name == "discord") {
-                        if (data.val == "I:100 | OK") {
-                            document.getElementById("loginForm").style.display = "none";
-                            document.getElementById("successDialog").style.display = "block";
-                            cljs.ws.close();
-                        } else {
-                            error(`Auth Bot Error: ${data.val}`);
-                        }
-                    }
-                });
-                cljs.on('ulist', (data) => {
-                    if (data.val.includes("Discord") == false) {
-                        error("Auth Bot Error: AUTH_BOT_OFFLINE");
-                    }
-                });
-                cljs.on('disconnected', () => {
-                    error("CloudLink Error: LOST_CONNECTION");
-                });
+<body>
+  <header>
+    <a href="index.html"><img src="assets/meowerlogo-white.svg" alt="Meower Header"></a>
+  </header>
+
+  <nav class="sticky">
+    <a href="index.html"><img src="icons/home.svg">Home</a>
+    <a href="https://app.meower.org"><img src="icons/rocket.svg">Launch</a>
+    <a href="about.html"><img src="icons/help-circle.svg">About Us</a>
+
+    <div class="dropdown">
+      <button class="dropbtn"><img src="icons/more-horizontal.svg">More</button>
+      <div class="dropdown-content">
+        <a href="https://forums.meower.org/"><img src="icons/users-2.svg">Forums</a>
+        <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
+        <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
+        <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+      </div>
+    </div>
+  </nav>
+  
+  <main>
+    <script>
+      class Cloudlink {
+        constructor(server) {
+          this.events = {};
+          this.ws = new WebSocket(server);
+          this.ws.onopen = async () => {
+            this.send({
+              cmd: 'direct',
+              val: {cmd: 'type', val: 'js'},
+            });
+            this.emit('connected');
+          };
+          this.ws.onmessage = (socketdata) => {
+            var data = JSON.parse(socketdata.data);
+            this.emit(data.cmd, data);
+          };
+          this.ws.onclose = () => {
+            this.emit('disconnected');
+          };
+          this.ws.onerror = (e) => {
+            this.emit('error', e);
+          };
+        }
+        send(data) {
+          this.ws.send(JSON.stringify(data));
+        }
+        on(event, cb) {
+          if (typeof this.events[event] !== 'object')
+            this.events[event] = [];
+          this.events[event].push(cb);
+        }
+        emit(event, data) {
+          if (typeof this.events[event] !== 'object')
+            return;
+          this.events[event].forEach((cb) => cb(data));
+        }
+        disconnect() {
+          this.ws.close();
+        }
+      }
+
+      function error(errorDetails) {
+        if (document.getElementById("errorDialog").style.display == "none" && document.getElementById("successDialog").style.display == "none") {
+          document.getElementById("loginForm").style.display = "none";
+          document.getElementById("errorDialog").style.display = "block";
+          document.getElementById("errorText").innerText = errorDetails;
+          cljs.ws.close();
+        }
+      }
+
+      function login() {
+        document.getElementById("submit").disabled = true;
+        document.getElementById("submit").innerText = "Connecting...";
+        window.cljs = new Cloudlink("wss://server.meower.org");
+        cljs.on('connected', () => {
+          document.getElementById("submit").innerText = "Authenticating...";
+          cljs.send({cmd: "direct", val: "meower", listener: "trustCheck"})
+        });
+        cljs.on('statuscode', (data) => {
+          if (data.val != "I:100 | OK" && data.val != "I:112 | Trusted Access enabled") {
+            error(`CloudLink Error: ${data.val}`);
+          } else if (data.val == "I:100 | OK" && data.listener == "trustCheck") {
+            cljs.send({cmd: "direct", val: {cmd: "authpswd", val: {username: document.getElementById("username").value, pswd: document.getElementById("password").value}}, listener: "auth"})
+          } else if (data.val == "I:100 | OK" && data.listener == "auth") {
+            document.getElementById("submit").innerText = "Verifying...";
+            const queryString = window.location.search;
+            const urlParams = new URLSearchParams(queryString);
+            cljs.send({cmd: "pvar", id: "Discord", name: "discord", val: urlParams.get('token')})
+          }
+        });
+        cljs.on('pvar', (data) => {
+          if (data.origin == "Discord" && data.name == "discord") {
+            if (data.val == "I:100 | OK") {
+              document.getElementById("loginForm").style.display = "none";
+              document.getElementById("successDialog").style.display = "block";
+              cljs.ws.close();
+            } else {
+              error(`Auth Bot Error: ${data.val}`);
             }
-        </script>
-        <div class="content" id="loginForm">
-            <h2 style="color:#ff5600;">Link Meower account to your Discord account</h2>
-            <div class="meower-info">To link your Meower account to your Discord account, just login below!<br>If you don't have a Meower account click <a href="https://app.meower.org" target="_blank">here</a> to open Meower and create one!</div>
-            <br><br>
-            <form>
-                <input type="text" id="username" placeholder="Username" /><br><br>
-                <input type="password" id="password" placeholder="Password" /><br><br><br>
-                <button type="button" id="submit" onclick="login();">Login and Link</button>
-            </form>
+          }
+        });
+        cljs.on('ulist', (data) => {
+          if (data.val.includes("Discord") == false) {
+            error("Auth Bot Error: AUTH_BOT_OFFLINE");
+          }
+        });
+        cljs.on('disconnected', () => {
+          error("CloudLink Error: LOST_CONNECTION");
+        });
+      }
+    </script>
+    <div class="dis-cont">
+      <div class="content" id="loginForm">
+        <h1 style="color:#ff5600;">Link Meower account to your Discord account</h1>
+        <div class="meower-info">
+          <p>To link your Meower account to your Discord account, just login below!<br>If you don't have
+            a Meower account click <a href="https://app.meower.org" target="_blank">here</a> to open Meower and create
+            one!</p>
         </div>
-        <div class="content" id="errorDialog" style="display: none;">
-            <h2 style="color:#ff5600;">Me-owch! We ran into an error.</h2>
-            <div class="meower-info" id="errorText"></div>
+        <br><br>
+        <form>
+          <input type="text" id="username" placeholder="Username"><br><br>
+          <input type="password" id="password" placeholder="Password"><br><br><br>
+          <button type="button" id="submit" onclick="login();">Login and Link</button>
+        </form>
+      </div>
+      <div class="content" id="errorDialog" style="display: none;">
+        <h1 style="color:#ff5600;">Me-owch! We ran into an error.</h1>
+        <div class="meower-info" id="errorText"></div>
+      </div>
+      <div class="content" id="successDialog" style="display: none;">
+        <h1 style="color:#ff5600;">Successfully Linked!</h1>
+        <div class="meower-info">
+          <p>Well done! You have successfully linked your Meower account to your Discord account.</p>
         </div>
-        <div class="content" id="successDialog" style="display: none;">
-            <h2 style="color:#ff5600;">Successfully Linked!</h2>
-            <div class="meower-info">Well done! You have successfully linked your Meower account to your Discord account.</div>
-        </div>
-        <br /><br />
-        <footer>
-            Yeah, no styling, will fix soon™
-        </footer>
-    </body>
+      </div>
+    </div>
+      <br><br>
+  </main>
+  <footer>
+    <p>&copy; 2020 -
+      <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
+    </p>
+    <button class="theme-switcher-button" id="theme-switcher-button"><img src="icons/palette.svg"></button>
+  </footer>
+  
+  <script src="themes.js"></script>
+</body>
+
 </html>
