--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section>
-      <h1>Safe for All Ages</h1>
+      <h1>Safe for All</h1>
       <p>A friendly place to be. We are committed to keeping Meower safe and welcoming for <em>all</em>. Our dedicated
         team works tirelessly to enforce community guidelines and ensure a positive experience for everyone.</p>
     </section>
